# Atlas

./: LICENSE  README.md
atlas-runtime/: .gitignore  CMakeLists.txt
atlas-runtime/app/memcached/: run-server.sh
atlas-runtime/app/memcached/server/: Makefile.am  assoc.c  assoc.h  atlas.h  configure.ac  items.c  items.h  memcached.c  memcached.h  proto_bin.c  proto_text.c  slabs.c  storage.c  thread.c
atlas-runtime/bks_module/bks_drv/: Makefile  bks.c  bks.h  bks_ioctl.c
atlas-runtime/bks_module/include/: bks_ioctl.h  bks_types.h
atlas-runtime/bks_module/remoteswap/: constants.h  utils.h
atlas-runtime/bks_module/remoteswap/client/: Makefile  manage_rswap_client.sh  rswap_client.c  rswap_dram.c  rswap_dram.h  rswap_dram_ops.c  rswap_rdma.c  rswap_rdma.h  rswap_rdma_custom_ops.c  rswap_rdma_custom_ops.h  rswap_rdma_ops.c  rswap_scheduler.h
atlas-runtime/bks_module/remoteswap/server/: rswap_server.cpp  rswap_server.hpp
atlas-runtime/runtime/include/: helpers.h  pointer.h  pointer_shim.h  runtime.h
atlas-runtime/runtime/lib/: CMakeLists.txt  bks_ctx.cc  bks_ctx.h  card.h  pointer.cc  runtime.cc  tsx.h
atlas-runtime/scripts/: setup.sh
atlas-runtime/tests/: CMakeLists.txt
atlas-runtime/tests/runtime/: CMakeLists.txt
atlas-runtime/tests/runtime/unique_ptr/: CMakeLists.txt  test.sh  unique_ptr_test.cc
linux-5.14-rc5/: README.md  build_kernel.sh  config
linux-5.14-rc5/extended_syscalls/: extended_syscalls.c
linux-5.14-rc5/fs/: exec.c  inode.c
linux-5.14-rc5/init/: init_task.c
linux-5.14-rc5/kernel/: exit.c  fork.c
linux-5.14-rc5/mm/: Makefile  (+20 more)
(+24 files in other folders)
